[tool.poetry]
name = "enigma-protocol-python"
version = "0.3.0"
description = ""
authors = ["Pradyumna Krishna <git@onpy.in>"]
license = "LICENSE.md"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
